<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/userInfoTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/userInfoTitle"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/userDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/default_toolbar_button_background"
        android:layout_below="@id/userInfoTitleTextView">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:src="@drawable/user_avatar"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/userDisplayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="Eren Lê Gơ"
            android:textSize="22sp"
            android:layout_weight="7"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/languageSwitchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userDetailsLayout">

        <Button
            android:id="@+id/languageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/languageText"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/languageSwitchDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/languageSwitch"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_weight="6"/>


    </LinearLayout>

</RelativeLayout>