<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".TransactionDetailActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_panel"
        android:backgroundTint="@color/light_blue_pastel"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_daily_report"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/transaction_icon"
                    android:src="@android:mipmap/sym_def_app_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/transaction_category"
                    android:hint="CATEGORY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/transaction_icon"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transaction_amount"
                    android:hint="AM"

                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transaction_category"
                    android:layout_toRightOf="@id/transaction_icon" />

                <TextView
                    android:id="@+id/transaction_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/transaction_category"
                    android:hint="DATE" />

                <TextView
                    android:id="@+id/transaction_currency"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transaction_category"
                    android:layout_toEndOf="@id/transaction_amount"
                    android:layout_marginLeft="2dp"
                    android:gravity="left|center_vertical"
                    android:hint="CUR" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_daily_report"
            app:cardBackgroundColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="5dp"

            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lilo_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtView_category"
                        android:text="@string/txt_category"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <Spinner
                        android:id="@+id/spinnerCate"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilo_amount"
                    android:layout_below="@id/lilo_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtView_amount"
                        android:text="@string/txt_spent_amount"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/edt_amount"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilo_date"
                    android:layout_below="@id/lilo_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:id="@+id/txtView_date"
                        android:text="@string/txt_spent_date"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/edt_date"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilo_time"
                    android:layout_below="@id/lilo_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/txtView_time"
                        android:text="@string/txt_transaction_time"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/edt_time"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilo_note"
                    android:orientation="vertical"
                    android:layout_below="@id/lilo_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtView_note"
                        android:text="@string/note"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_weight="6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edt_note"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilo_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">
                    <Button
                        android:id="@+id/btn_delete"
                        android:background="@drawable/inner_rounded_panel"
                        android:text="@string/btn_delete"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="deleteTransaction"/>
                    <Button
                        android:id="@+id/btn_save"
                        android:background="@drawable/inner_rounded_panel"
                        android:backgroundTint="@color/natural_titanium"
                        android:text="@string/btn_save"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="saveTransaction"/>
                </LinearLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>